feature: added support to load multiple configs in order and to load configs from the package